# color_switch

./: .gitignore  Cargo.toml  README.md  local.data
assets/: CREDITS.txt
lib/: Cargo.toml
lib/src/: lib.rs
macroquad_utils/: Cargo.toml
macroquad_utils/src/: lib.rs
src/: assets.rs  bullet.rs  characters.rs  collectibe.rs  collection.rs  collision.rs  colors.rs  enemy.rs  game.rs  hp.rs  log.rs  main.rs  menu.rs  options.rs  particle.rs  player.rs  upgrade.rs  wave.rs
